--- a/validation_lib2/formvalidation2.css
+++ b/validation_lib2/formvalidation2.css
@@ -11,7 +11,7 @@
 }
 
 .field-invalid {
-    border-color: rgb(255, 81, 0);
+    border-color: rgb(255, 81, 0) !important;
 }
 
 .button-radius-10 {
