--- a/validation_lib1/formvalidation.css
+++ b/validation_lib1/formvalidation.css
@@ -11,7 +11,8 @@
 }
 
 .field-invalid {
-    border-color: rgb(255, 81, 0);
+    border-color: rgb(255, 81, 0) !important;
+    background-color: rgb(245, 242, 209);
 }
 
 .button-radius-10 {
